# bazel-pipeline-demo

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  ingress.yaml  run.sh  short.yaml  site
.github/: dependabot.yml
client/: BUILD.bazel  client.go  go.mod  job.yaml
consumer/: .dev  .gitignore  BUILD.bazel  Cargo.toml  amqp.rs  data.rs  deployment.yaml  error.rs  main.rs  pg.rs  result.rs
consumer/cargo/: BUILD.bazel  crates.bzl
consumer/cargo/remote/: BUILD.aho-corasick-0.7.15.bazel  BUILD.amq-protocol-6.0.2.bazel  BUILD.amq-protocol-tcp-6.0.2.bazel  BUILD.amq-protocol-types-6.0.2.bazel  BUILD.amq-protocol-uri-6.0.2.bazel  BUILD.arrayvec-0.5.2.bazel  BUILD.async-task-4.0.3.bazel  BUILD.async-trait-0.1.42.bazel  BUILD.atty-0.2.14.bazel  BUILD.autocfg-1.0.1.bazel  BUILD.base64-0.13.0.bazel  BUILD.bitflags-1.2.1.bazel  BUILD.bitvec-0.19.4.bazel  BUILD.block-buffer-0.9.0.bazel  BUILD.byteorder-1.3.4.bazel  BUILD.bytes-0.5.6.bazel  BUILD.bytes-0.6.0.bazel  BUILD.cc-1.0.65.bazel  BUILD.cfg-if-0.1.10.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.cloudabi-0.1.0.bazel  BUILD.cookie-factory-0.3.1.bazel  BUILD.core-foundation-0.9.1.bazel  BUILD.core-foundation-sys-0.8.2.bazel  BUILD.cpuid-bool-0.1.2.bazel  BUILD.crossbeam-channel-0.5.0.bazel  BUILD.crossbeam-utils-0.8.1.bazel  BUILD.crypto-mac-0.9.1.bazel  BUILD.digest-0.9.0.bazel  BUILD.doc-comment-0.3.3.bazel  BUILD.env_logger-0.8.2.bazel  BUILD.fallible-iterator-0.2.0.bazel  BUILD.foreign-types-0.3.2.bazel  BUILD.foreign-types-shared-0.1.1.bazel  BUILD.form_urlencoded-1.0.0.bazel  BUILD.funty-1.0.1.bazel  BUILD.futures-0.3.8.bazel  BUILD.futures-channel-0.3.8.bazel  BUILD.futures-core-0.3.8.bazel  BUILD.futures-executor-0.3.8.bazel  (+106 more)
dispatcher/: .dev  BUILD.bazel  amqp.go  amqp_test.go  deployment.yaml  dispatcher.go  dispatcher_test.go  go.mod  go.sum  run.sh
dispatcher/sql/: init.sql
env/: .docker
front/: BUILD.bazel  index.html  index.js  package-lock.json  package.json
graphql/: .dev  BUILD.bazel  deployment.yaml  package-lock.json  package.json
graphql/src/: main.js
integration_test/: BUILD.bazel  test.py  util.py
postgresql/: 01-install.sh  02-init.sql  BUILD.bazel  config-map.yaml  deployment.yaml  init.sql  postgresql.conf
rabbitmq/: BUILD.bazel  config-map.yaml  deployment.yaml
sensor/: .dev  BUILD.bazel  deployment.yaml  dispatcher.go  dispatcher_test.go  go.mod  job.yaml  sensor.go
server/: .env  BUILD.bazel  deployment.yaml  go.mod  go.sum  run.sh  server.go
test/: BUILD.bazel  requirements.txt  test.py
util/: BUILD.bazel  __init__.py  k8s.py  requirements.txt
util/tools/: BUILD.bazel  get_service_url.py  requirements.txt  tools.py
util/ytt/: BUILD.bazel  expand_template.py  repository.bzl  run.bzl
web/: BUILD.bazel  README.md  deployment.yaml  index.js  package-lock.json  package.json  run.sh
web/components/: Chart.js  PublicEnv.js
web/pages/: index.js
