load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["client.go"],
    importpath = "github.com/vincent-herlemont/pipeline-demo/client",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    srcs = ["client.go"],
    importpath = "github.com/vincent-herlemont/pipeline-demo/client",
)

load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

k8s_object(
  name = "job",
  kind = "Job",
  cluster = "minikube",
  template = "job.yaml",

  images = {
    "docker.local:5000/pipline-demo/client:dev": ":image"
  },

  visibility = ["//visibility:public"],
)