load("@io_bazel_rules_rust//rust:rust.bzl", "rust_binary", "rust_test")

rust_binary(
    name = "consumer",
    srcs = glob(["**/*.rs"]),
    deps = [
        "//consumer/cargo:log",
        "//consumer/cargo:env_logger",
        "//consumer/cargo:lapin",
        "//consumer/cargo:futures",
        "//consumer/cargo:postgres",
        "//consumer/cargo:thiserror",
    ],
)

rust_test(
    name = "test",
    crate = ":consumer",
    deps = [":consumer"],
)

load("@io_bazel_rules_docker//rust:image.bzl", "rust_image")

load("@io_bazel_rules_docker//container:container.bzl", "container_layer")

rust_image(
    name = "image",
    srcs = ["main.rs"],
    base = "@ubuntu20//image",
    binary = "consumer",
)

load("@pipeline_demo//util/ytt:run.bzl","ytt")

ytt(
    name = "deployment-ytt",
    file = ":deployment.yaml",
)

load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

k8s_object(
    name = "deployment",
    cluster = "{STABLE_CLUSTER}",
    images = {
        "{STABLE_REGISTRY}/consumer:dev": ":image",
    },
    kind = "Deployment",
    template = ":deployment-ytt",
)

load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "app",
    objects = [
        ":deployment",
    ],
    visibility = ["//visibility:public"],
)
