[package]
name = "consumer"
version = "0.0.1"
edition = "2018"

[dependencies]
log = { version = "0.4.11", features = ["std"] }
env_logger = "0.8.2"
lapin = { version = "1.7.0", features = ["openssl"]}
futures = "0.3.8"
postgres = "0.18.1"
thiserror = "1.0.22"

[[bin]]
name = "consumer"
path = "main.rs"

[package.metadata.raze]
workspace_path = "//consumer/cargo"
# Warning: Set bazel build not hermetic.
default_gen_buildrs = true
genmode = "Remote"
target = "x86_64-unknown-linux-gnu"

[package.metadata.raze.crates.pinky-swear.'*']
data_attr = "[\"README.md\"]"