load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_binary(
    name = "dispatcher",
    srcs = glob(
        include = ["**/*.go"],
        exclude = ["**/*_test.go"],
    ),
    importpath = "github.com/vincent-herlemont/pipeline-demo/dispatcher",
    deps = [
        "@com_github_streadway_amqp//:go_default_library",
    ],
    visibility = ["//visibility:public"],
)

go_test(
    name = "test",
    srcs = glob(["**/*_test.go"]),
    embed = [":dispatcher"],
)

go_image(
    name = "image",
    binary = ":dispatcher",
)

load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

k8s_object(
    name = "deployment",
    cluster = "minikube",
    images = {
        "{STABLE_REGISTRY}/dispatcher:dev": "//dispatcher:image",
    },
    kind = "Deployment",
    template = "deployment.yaml",
)

load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "app",
    objects = [
        ":deployment",
    ],
    visibility = ["//visibility:public"],
)
