load("@npm_front//http-server:index.bzl", "http_server")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_web")

pkg_web(
    name = "app",
    srcs = [
        "index.html",
        "index.js",
    ],
)

http_server(
    name = "server",
    data = [":app"],
    templated_args = ["front/app"],
)

load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")

nodejs_image(
    name = "image",
    entry_point = ":index.js",
    # npm deps will be put into their own layer
    data = [":index.js"],
)