load("@build_bazel_rules_nodejs//:index.bzl","nodejs_binary")
nodejs_binary(
    name = "graphql",
    data = 
        glob(["src/**/*"]) + 
        [
            "@npm_graphql//apollo-server",
            "@npm_graphql//datasource-sql",
            "@npm_graphql//pg",
        ],
    entry_point = "src/main.js",
)

load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")

nodejs_image(
    name = "image",
    binary = "graphql",
)

load("@pipeline_demo//util/ytt:run.bzl","ytt")

ytt(
    name = "deployment-ytt",
    file = ":deployment.yaml",
)

load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

k8s_object(
    name = "deployment",
    cluster = "{STABLE_CLUSTER}",
    images = {
        "{STABLE_REGISTRY}/graphql:dev": ":image",
    },
    kind = "Deployment",
    template = ":deployment-ytt",
)

load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "app",
    objects = [
        ":deployment",
    ],
    visibility = ["//visibility:public"],
)
