load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")


container_image(
    name = "image",
    base = "@postgres//image",
    files = [
        ":init.sql",
    ],
    symlinks = {
        "/docker-entrypoint-initdb.d/init.sql": "/init.sql",
    },
)

k8s_object(
    name = "configmap",
    cluster = "minikube",
    kind = "ConfigMap",
    template = "config-map.yaml",
)

k8s_object(
    name = "volume",
    cluster = "minikube",
    kind = "PersistentVolumeClaim",
    template = "volume.yaml",
)

k8s_object(
    name = "deployment",
    cluster = "minikube",
    kind = "Deployment",
    images = {
        "{STABLE_REGISTRY}/posgresql:dev": ":image",
    },
    template = "deployment.yaml",
)

load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "app",
    objects = [
        ":configmap",
        ":volume",
        ":deployment",
    ],
    visibility = ["//visibility:public"],
)
