load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@pipeline_demo//util/ytt:run.bzl","ytt")

ytt(
    name = "config-map-ytt",
    file = ":config-map.yaml",
)

k8s_object(
    name = "configmap",
    cluster = "{STABLE_CLUSTER}",
    kind = "ConfigMap",
    template = ":config-map-ytt",
)


k8s_object(
    name = "deployment",
    cluster = "{STABLE_CLUSTER}",
    kind = "Deployment",
    template = "deployment.yaml",
)

load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "app",
    objects = [
        ":configmap",
        ":deployment",
    ],
    visibility = ["//visibility:public"],
)