load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sensor_lib",
    srcs = ["sensor.go"],
    importpath = "github.com/vincent-herlemont/pipeline-demo/sensor",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "sensor",
    embed = [":sensor_lib"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    srcs = ["sensor.go"],
    importpath = "github.com/vincent-herlemont/pipeline-demo/sensor",
)

load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

k8s_object(
    name = "job",
    cluster = "minikube",
    images = {
        "docker.local:5000/pipline-demo/sensor:dev": ":image",
    },
    kind = "Job",
    template = "job.yaml",
    visibility = ["//visibility:public"],
)
