load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_test")

go_binary(
    name = "sensor",
    srcs = glob(
        include = ["**/*.go"],
        exclude = ["**/*_test.go"],
    ),
    visibility = ["//visibility:public"],
)

go_test(
    name = "test",
    srcs = glob(["**/*_test.go"]),
    embed = [":sensor"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    binary = ":sensor",
)

load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

k8s_object(
    name = "job",
    cluster = "minikube",
    images = {
        "docker.local:5000/pipline-demo/sensor:dev": ":image",
    },
    kind = "Job",
    template = "job.yaml",
    visibility = ["//visibility:public"],
)
