load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_test")

go_binary(
    name = "sensor",
    srcs = glob(
        include = ["**/*.go"],
        exclude = ["**/*_test.go"],
    ),
    visibility = ["//visibility:public"],
)

go_test(
    name = "test",
    srcs = glob(["**/*_test.go"]),
    embed = [":sensor"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    binary = ":sensor",
)

load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

k8s_object(
    name = "deployment",
    cluster = "minikube",
    images = {
        "{STABLE_REGISTRY}/sensor:dev": "//sensor:image",
    },
    kind = "Deployment",
    template = "deployment.yaml",
)

load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "app",
    objects = [
        ":deployment",
    ],
    visibility = ["//visibility:public"],
)