load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["server.go"],
    importpath = "github.com/vincent-herlemont/pipeline-demo/server",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@com_github_streadway_amqp//:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
