load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["server.go"],
    importpath = "github.com/vincent-herlemont/pipeline-demo/server",
    visibility = ["//visibility:private"],
    deps = ["@com_github_lib_pq//:go_default_library"],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    srcs = ["server.go"],
    importpath = "github.com/vincent-herlemont/pipeline-demo/server",
    deps = ["@com_github_lib_pq//:go_default_library"],
)

load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

k8s_object(
    name = "deployment",
    cluster = "minikube",
    images = {
        "docker.local:5000/pipline-demo/server:dev": "//server:image",
    },
    kind = "Deployment",
    template = "deployment.yaml",
)

load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "app",
    objects = [
        ":deployment",
    ],
    visibility = ["//visibility:public"],
)
